--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ __pycache__/lol_image.cpython-37.pyc
 .DS_Store
 spell-recognition/__pycache__/lol_spell_recognition.cpython-37.pyc
 /spell-recognition/credentials.json
+/.idea/shelf/Uncommitted_changes_before_Update_at_02_08_2020_14_45_[Default_Changelist]/shelved.patch
